--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
     "rules": {
 		"no-console": 0,
 		"import/extensions": 0,
+		"no-use-before-define": 0,
 		"no-underscore-dangle": [2, { "allow": ["__filename", "__dirname"] }]
     }
 }
